--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ngneat/react-rxjs": "^1.1.0",
     "keycloak-angular": "^14.1.0",
     "keycloak-js": "^22.0.2",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
